--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
   font-size: 2em;
   font-family: Arial;
-  background-image: url(./images/background2.JPG);
+  background-image: url(./images/background2.jpg);
   background-size: cover;
   padding: 0;
   text-align: center;
 }
 
 canvas {
-  background-image: url(./images/background1.JPG);
+  background-image: url(./images/background1.jpg);
   background-size: cover;
   float: left;
   padding: 20px 0px;
